# cafeminute-rust

./: Cargo.toml  README.md  _Rocket.toml
db/: test.json
news/: 0BqAq.json  Dhqr2.json  VS9ZO.json  ldIba.json
products/: MieE.json  pGBhh.json  sPIn.json
schedule/: schedule.json
src/: db.rs  main.rs  news.rs  open_close.rs  products.rs  structs.rs  usercount.rs
