[package]
name = "cafeminute-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.27"
map-macro = "0.2.6"
random-string = "1.0.0"
rocket = "0.5.0-rc.3"
serde = "1.0.188"
serde_json = "1.0.105"
strip_markdown = "0.2.0"
substring = "1.4.5"
